group 'com.spinyowl'
version '0.0.1-SNAPSHOT'

subprojects {
    
    buildDir = new File(rootProject.projectDir, "build/" + project.name)
    
    afterEvaluate {
        group 'com.spinyowl'
        version rootProject.version

        repositories {
            mavenCentral()
            jcenter()
            maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
            maven { url "https://raw.githubusercontent.com/LiquidEngine/repo/snapshots" }
            maven { url "https://raw.githubusercontent.com/LiquidEngine/repo/releases" }

        }

        dependencies {// https://mvnrepository.com/artifact/org.slf4j/slf4j-api
//            compile group: 'org.slf4j', name: 'slf4j-api', version: '1.8.0-beta2'
//            compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.8.0-beta2'
        }

        sourceCompatibility = 1.11

        compileJava {
            doFirst {
                options.compilerArgs = [
                        '--module-path', classpath.asPath,
                ]
                classpath = files()
            }
        }

        compileTestJava {
            inputs.property("moduleName", moduleName)
            doFirst {
                options.compilerArgs = [
                        '--module-path', classpath.asPath,
                        '--add-modules', 'junit',
                        '--add-reads', "$moduleName=junit",
                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
                ]
                classpath = files()
            }
        }

        test {
            inputs.property("moduleName", moduleName)
            doFirst {
                jvmArgs = [
                        '--module-path', classpath.asPath,
                        '--add-modules', 'ALL-MODULE-PATH',
                        '--add-reads', "$moduleName=junit",
                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
                ]
                classpath = files()
            }
        }
    }
}
